# Whisper

./: .gitignore  CMakeLists.txt  configTemplate.json  main.cpp
analysis/: address.json  auc.py
commune/: CMakeLists.txt  analyzerWorker.cpp  analyzerWorker.hpp  deviceConfig.cpp  dpdkCommon.hpp  kMeansLearner.hpp  parserWorker.cpp  parserWorker.hpp
trace-replay/: .gitignore  controller.py  eval_metrics.py  fc_whisper.py  pipeline_whisper.py
trace-replay/config/: whisper.yml
trace-replay/utils/: peregrine_hdr.py
